add gc tools